--- a/custom_components/samsungtv_tizen/translations/en.json
+++ b/custom_components/samsungtv_tizen/translations/en.json
@@ -67,6 +67,7 @@
                     "wol_repeat": "Number of time WOL packet is sent to turn on TV",
                     "power_on_delay": "Seconds to delay power ON status",
                     "use_mute_check": "Use volume mute status to detect fake power ON",
+                    "logo_option": "Display a logo for known sources, apps and channels",
                     "sync_turn_off": "List of entity to Power OFF with TV (comma separated)",
                     "sync_turn_on": "List of entity to power ON with TV (comma separated)"
                 }
