--- a/custom_components/samsungtv_tizen/translations/en.json
+++ b/custom_components/samsungtv_tizen/translations/en.json
@@ -66,6 +66,7 @@
                     "power_on_method": "Method used to turn on TV",
                     "wol_repeat": "Number of time WOL packet is sent to turn on TV",
                     "power_on_delay": "Seconds to delay power ON status",
+                    "logo_option": "Display a logo for known sources, apps and channels",
                     "use_mute_check": "Use volume mute status to detect fake power ON",
                     "sync_turn_off": "List of entity to Power OFF with TV (comma separated)",
                     "sync_turn_on": "List of entity to power ON with TV (comma separated)"
