--- a/custom_components/samsungtv_tizen/translations/en.json
+++ b/custom_components/samsungtv_tizen/translations/en.json
@@ -21,11 +21,11 @@
             "st_device_not_found": "SmartThings TV deviceID not found.",
             "st_device_used": "SmartThings TV deviceID already used."
         },
-        "flow_title": "SamsungTV Smart: {model}",
+        "flow_title": "SamsungTV Tizen: {model}",
         "step": {
             "confirm": {
                 "description": "Do you want to set up Samsung TV {model}? If you never connected Home Assistant before you should see a popup on your TV asking for authorization. Manual configurations for this TV will be overwritten.",
-                "title": "SamsungTV Smart"
+                "title": "SamsungTV Tizen"
             },
             "user": {
                 "data": {
@@ -35,24 +35,24 @@
                     "api_key": "SmartThings generated token (optional)"
                 },
                 "description": "Enter your Samsung TV information. SmartThings token is optional but really suggested. If you never connected Home Assistant before you should see a popup on your TV asking for authorization.",
-                "title": "SamsungTV Smart"
+                "title": "SamsungTV Tizen"
             },
             "stdevice": {
                 "data": {
                     "st_devices": "SmartThings TV"
                 },
                 "description": "You have multiple TVs configured on your account. Select the TV you are configuring from the list.",
-                "title": "SamsungTV Smart"
+                "title": "SamsungTV Tizen"
             },
             "stdeviceid": {
                 "data": {
                     "device_id": "SmartThings TV deviceID"
                 },
                 "description": "Automatic SmartThings deviceID detection failed. To continue you must identify the deviceID on the SmartThings site (see documentation) and insert it here.",
-                "title": "SamsungTV Smart"
+                "title": "SamsungTV Tizen"
             }
         },
-        "title": "SamsungTV Smart"
+        "title": "SamsungTV Tizen"
     },
     "options": {
         "step": {
@@ -67,8 +67,8 @@
                     "power_on_method": "Method used to turn on TV",
                     "wol_repeat": "Number of time WOL packet is sent to turn on TV",
                     "power_on_delay": "Seconds to delay power ON status",
-                    "logo_option": "Display a logo for known sources, apps and channels",
                     "use_mute_check": "Use volume mute status to detect fake power ON",
+                    "logo_option": "Display a logo for known sources, apps and channels",
                     "sync_turn_off": "List of entity to Power OFF with TV (comma separated)",
                     "sync_turn_on": "List of entity to power ON with TV (comma separated)"
                 }
