--- a/custom_components/samsungtv_smart/translations/en.json
+++ b/custom_components/samsungtv_smart/translations/en.json
@@ -50,20 +50,21 @@
     "options": {
         "step": {
             "init": {
-                "title": "Options",
+                "title": "SamsungTV Smart Options",
                 "data": {
                     "use_st_status_info": "Use SmartThings TV Status information",
                     "use_st_channel_info": "Use SmartThings TV Channels information",
                     "show_channel_number": "Use SmartThings TV Channels number information",
                     "power_on_method": "Method used to turn on TV",
                     "logo_option": "Display a logo for known sources, apps and channels",
+                    "use_local_logo": "Allow use of local logo images",
                     "sync_turn_off": "List of entity to Power OFF with TV",
                     "sync_turn_on": "List of entity to power ON with TV",
                     "show_adv_opt": "Show advanced options"
                 }
             },
             "adv_opt": {
-                "title": "Advanced options",
+                "title": "SamsungTV Smart Advanced options",
                 "data": {
                     "app_load_method": "Applications list load mode at startup",
                     "app_launch_method": "Applications launch method used",
