--- a/custom_components/samsungtv_smart/translations/pt-BR.json
+++ b/custom_components/samsungtv_smart/translations/pt-BR.json
@@ -50,20 +50,21 @@
     "options": {
         "step": {
             "init": {
-                "title": "Opções",
+                "title": "Opções SamsungTV Smart",
                 "data": {
                     "use_st_status_info": "Use as informações de status da TV SmartThings",
                     "use_st_channel_info": "Use as informações dos canais de TV SmartThings",
                     "show_channel_number": "Use as informações de número dos canais de TV SmartThings",
                     "power_on_method": "Método usado para ligar a TV",
                     "logo_option": "Exiba uma logo para fontes, aplicativos e canais conhecidos",
+                    "use_local_logo": "Permitir o uso de imagens de logotipos locais",
                     "sync_turn_off": "Lista de entidades para desligar com a TV",
                     "sync_turn_on": "Lista de entidades para ligar com a TV",
                     "show_adv_opt": "Mostrar opções avançadas"
                 }
             },
             "adv_opt": {
-                "title": "Opções avançadas",
+                "title": "Opções avançadas SamsungTV Smart",
                 "data": {
                     "app_load_method": "Modo de carregamento da lista de aplicativos na inicialização",
                     "app_launch_method": "Método usado na inicialização de aplicativos",
