Add adv option to toggle power to art mode for frame TV (PR #154)

--- a/custom_components/samsungtv_smart/translations/en.json
+++ b/custom_components/samsungtv_smart/translations/en.json
@@ -73,7 +73,8 @@
                     "wol_repeat": "Number of time WOL packet is sent to turn on TV",
                     "power_on_delay": "Seconds to delay power ON status",
                     "ping_port": "TCP port used to check power status (0 for ICMP)",
-                    "ext_power_entity": "Binary sensor to help detect power status"
+                    "ext_power_entity": "Binary sensor to help detect power status",
+                    "toggle_art_mode": "Power button switch to art mode (Frame TV only)"
                 }
             }
         }
